@@ -1,5 +1,9 @@
 User-visible changes in version 0.4.3:
 
+* wxWidgets 2.5 compatible
+* data files (in addition to scripts) can be specified as command line 
+  arguments to fityk-GUI. Scripts should either have .fit or .fityk extensions
+  or start with "# Fityk" string. 
 * crosshair cursor (GUI->Crosshair cursor)
 * "Data->Load File" dialog (simple) allows to open many files 
 * unix man page (Carlo Segre)
